cluster/validation/kyverno/testdata/httproute_in_service_namespace.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: legit-service
  namespace: forgejo
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - "git.allegedly.works"
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
