cluster/validation/kyverno/testdata/pod_service_links_default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-links-default
  namespace: default
spec:
  containers:
    - name: app
      image: busybox:latest
