cluster/validation/kyverno/testdata/seaweedfs_pod_no_volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-pvc-consumer
  namespace: agent-workspaces
spec:
  containers:
    - name: app
      image: busybox
